--- a/index.html
+++ b/index.html
@@ -12,52 +12,79 @@
 </head>
 <body>
     <nav class="deep-purple darken-3">
-        <div class="nav-wrapper container">
-          <a href="#" class="brand-logo">DJS_Studio</a>
-          <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Contato</a></li>
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">DJS_Studio</a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Contato</a></li>
+        </ul>
+
+        <ul class="sidenav" id="mobile-demo">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Contato</a></li>
           </ul>
+      </div>
+    </nav>
 
-          <ul class="sidenav" id="mobile-demo">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Contato</a></li>
-            </ul>
+    <div class="section deep-purple darken-1 sect1">
+      <div class="container">
+          <div class="form-container">
+            <div class="row">
+              <div class="input-field col s6">
+                <input placeholder="Primeiro Nome" id="first_name" type="text" class="validate">
+                <label for="first_name">Primeiro Nome</label>
+              </div><!--input-field-->
+              <div class="input-field col s6">
+                <input placeholder="Sobrenome" id="last_name" type="text" class="validate">
+                <label for="last_name">Sobrenome</label>
+              </div><!--input-field-->
+            </div><!--row-->
+            <div class="row">
+              <div class="input-field col s12">
+                <input placeholder="E-mail" id="email" type="email" class="validate">
+                <label for="email">E-mail</label>
+              </div>
+            </div><!--row-->
+            <div class="row">
+              <div class="col s12 center">
+                <button class="btn waves-effect waves-light deep-purple" type="submit" name="action">Enviar
+                  <i class="material-icons right">send</i>
+                </button><!--btn-->
+              </div><!--col-->
+            </div><!--row-->
+          </div><!--form-container-->
+      </div><!--container-->
+    </div><!--section-->
+
+    <div class="section">
+      <div class="container">
+        <div class="row">
+          <div class="col s12 m6">
+            <h2 class="custom-title deep-purple-text lighten-5">
+              Sobre o autor
+            </h2>
+            <p class="flow-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero mollitia labore maxime autem in ipsum officia magni? Quibusdam?</p>
+          </div>
+
+          <div class="col s12 m6">
+            <h2 class="custom-title">
+              mensagem do dia
+            </h2>
+
+            <div class="card deep-purple darken-1">
+              <div class="card-content white-text">
+                <span class="card-title">Card Title</span>
+                <p>I am a very simple card. I am good at containing small bits of information.
+                I am convenient because I require little markup to use effectively.</p>
+              </div>
+            </div>
+          </div>
         </div>
-      </nav>
-
-      <div class="section deep-purple darken-1 sect1">
-        <div class="container">
-            <div class="form-container">
-              <div class="row">
-                <div class="input-field col s6">
-                  <input placeholder="Primeiro Nome" id="first_name" type="text" class="validate">
-                  <label for="first_name">Primeiro Nome</label>
-                </div><!--input-field-->
-                <div class="input-field col s6">
-                  <input placeholder="Sobrenome" id="last_name" type="text" class="validate">
-                  <label for="last_name">Sobrenome</label>
-                </div><!--input-field-->
-              </div><!--row-->
-              <div class="row">
-                <div class="input-field col s12">
-                  <input placeholder="E-mail" id="email" type="email" class="validate">
-                  <label for="email">E-mail</label>
-                </div>
-              </div><!--row-->
-              <div class="row">
-                <div class="col s12 center">
-                  <button class="btn waves-effect waves-light deep-purple" type="submit" name="action">Enviar
-                    <i class="material-icons right">send</i>
-                  </button><!--btn-->
-                </div><!--col-->
-              </div><!--row-->
-            </div><!--form-container-->
-        </div><!--container-->
-      </div><!--section-->
+      </div>
+    </div>
 
     <script src="js/jquery.js"></script>
     <script src="js/materialize.js"></script>
