--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
       <div class="container">
           <div class="form-container">
             <div class="row">
-              <div class="input-field col s6">
+              <div class="input-field col s12 m6">
                 <input placeholder="Primeiro Nome" id="first_name" type="text" class="validate">
                 <label for="first_name">Primeiro Nome</label>
               </div><!--input-field-->
-              <div class="input-field col s6">
+              <div class="input-field col s12 m6">
                 <input placeholder="Sobrenome" id="last_name" type="text" class="validate">
                 <label for="last_name">Sobrenome</label>
               </div><!--input-field-->
@@ -63,17 +63,18 @@
       <div class="container">
         <div class="row">
           <div class="col s12 m6">
-            <h2 class="custom-title deep-purple-text lighten-5">
-              Sobre o autor
-            </h2>
+            <div class="custom-title">
+              <div class="linha"></div>
+              <h2 class="deep-purple-text lighten-5">Sobre o autor</h2>
+            </div>
             <p class="flow-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero mollitia labore maxime autem in ipsum officia magni? Quibusdam?</p>
           </div>
 
           <div class="col s12 m6">
-            <h2 class="custom-title">
-              mensagem do dia
-            </h2>
-
+            <div class="custom-title">
+              <div class="linha"></div>
+              <h2>mensagem do dia</h2>
+            </div>
             <div class="card deep-purple darken-1">
               <div class="card-content white-text">
                 <span class="card-title">Card Title</span>
