--- a/index.html
+++ b/index.html
@@ -64,28 +64,196 @@
         <div class="row">
           <div class="col s12 m6">
             <div class="custom-title">
-              <div class="linha"></div>
+              <div class="linha"></div><!--linha-->
               <h2 class="deep-purple-text lighten-5">Sobre o autor</h2>
-            </div>
+            </div><!--custom-title-->
             <p class="flow-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero mollitia labore maxime autem in ipsum officia magni? Quibusdam?</p>
-          </div>
+          </div><!--col-->
 
           <div class="col s12 m6">
             <div class="custom-title">
               <div class="linha"></div>
               <h2>mensagem do dia</h2>
-            </div>
+            </div><!--custom-title-->
             <div class="card deep-purple darken-1">
               <div class="card-content white-text">
                 <span class="card-title">Card Title</span>
                 <p>I am a very simple card. I am good at containing small bits of information.
                 I am convenient because I require little markup to use effectively.</p>
+              </div><!--card-content-->
+            </div><!--card-->
+          </div><!--col-->
+        </div><!--row-->
+      </div><!--container-->
+    </div><!--section-->
+
+    <div class="section">
+      <div class="container">
+        <div class="row">
+          <div class="custom-title">
+            <div class="linha"></div><!--linha-->
+            <h2>Imagens Legais</h2>
+          </div><!--custom-title-->
+
+          <div class="col m4 s12">
+            <div class="card">
+              <div class="card-image">
+                <img src="img/image.jpg">
+                <span class="card-title">Titulo</span>
+              </div><!--card-image-->
+              <div class="card-content">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex modi eveniet officiis deserunt amet beatae mollitia illo natus alias est.</p>
+              </div><!--card-content-->
+            </div><!--card-->
+          </div><!--col-->
+
+          <div class="col m4 s12">
+            <div class="card">
+              <div class="card-image">
+                <img src="img/image2.jpg">
+                <span class="card-title">Titulo</span>
+              </div><!--card-image-->
+              <div class="card-content">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex modi eveniet officiis deserunt amet beatae mollitia illo natus alias est.</p>
+              </div><!--card-content-->
+            </div><!--card-->
+          </div><!--col-->
+
+          <div class="col m4 s12">
+            <div class="card">
+              <div class="card-image">
+                <img src="img/image3.png">
+                <span class="card-title">Titulo</span>
+              </div><!--card-image-->
+              <div class="card-content">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex modi eveniet officiis deserunt amet beatae mollitia illo natus alias est.</p>
+              </div><!--card-content-->
+            </div><!--card-->
+          </div><!--col-->
+        </div><!--row-->
+      </div><!--container-->
+    </div><!--section-->
+
+    <div class="section">
+      <div class="container">
+        <div class="row">
+          <div class="custom-title">
+            <div class="linha"></div><!--linha-->
+            <h2>Equipe</h2>
+          </div><!--custom-title-->
+          <div class="col m6 s12">
+            <ul class="collection">
+              <li class="collection-item avatar">
+                <i class="material-icons circle">assignment_ind</i>
+                <span class="title">Cargo</span>
+                <p>Primeiro Nome <br>
+                   Segundo Nome
+                </p>
+                <a href="#!" class="secondary-content"><i class="material-icons">assignment_turned_in</i></a>
+              </li><!--collection-item-->
+              <li class="collection-item avatar">
+                <i class="material-icons circle">assignment_ind</i>
+                <span class="title">Cargo</span>
+                <p>Primeiro Nome <br>
+                   Segundo Nome
+                </p>
+                <a href="#!" class="secondary-content"><i class="material-icons">assignment_turned_in</i></a>
+              </li><!--collection-item-->
+            </ul><!--collection-->
+          </div><!--col-->
+
+          <div class="col m6 s12">
+            <ul class="collection">
+              <li class="collection-item avatar">
+                <i class="material-icons circle">assignment_ind</i>
+                <span class="title">Cargo</span>
+                <p>Primeiro Nome <br>
+                   Segundo Nome
+                </p>
+                <a href="#!" class="secondary-content"><i class="material-icons">assignment_turned_in</i></a>
+              </li><!--collection-item-->
+              <li class="collection-item avatar">
+                <i class="material-icons circle">assignment_ind</i>
+                <span class="title">Cargo</span>
+                <p>Primeiro Nome <br>
+                   Segundo Nome
+                </p>
+                <a href="#!" class="secondary-content"><i class="material-icons">assignment_turned_in</i></a>
+              </li><!--collection-item-->
+            </ul><!--collection-->
+          </div><!--col-->
+        </div><!--row-->
+      </div><!--container-->
+    </div><!--section-->
+
+    <div class="section">
+      <div class="container">
+        <div class="row">
+          <div class="custom-title">
+            <div class="linha"></div><!--linha-->
+            <h2>Entre em contato</h2>
+          </div><!--custom-title-->
+
+          <form class="col s12">
+            <div class="row">
+              <div class="input-field col s12 m6">
+                <input id="first_name_contact" type="text" class="validate">
+                <label for="first_name_contact">Primeiro Nome</label>
+              </div><!--col-->
+              <div class="input-field col s12 m6">
+                <input id="last_name_contact" type="text" class="validate">
+                <label for="last_name_contact">Sobrenome</label>
+              </div><!--col-->
+            </div><!--row-->
+            <div class="row">
+              <div class="input-field col s12">
+                <input id="email_contact" type="email" class="validate">
+                <label for="email_contact">E-mail</label>
+              </div><!--col-->
+            </div><!--row-->
+            <div class="row">
+              <div class="input-field col s12">
+                <textarea id="textarea1" class="materialize-textarea"></textarea>
+                <label for="textarea1">Mensagem</label>
               </div>
             </div>
+            <div class="row">
+              <div class="col s12 center">
+                <button class="btn waves-effect waves-light grey darken-4" type="submit" name="action">Enviar
+                  <i class="material-icons right">send</i>
+                </button><!--btn-->
+              </div><!--col-->
+            </div><!--row-->
+          </form><!--col-->
+        </div><!--row-->
+      </div><!--container-->
+    </div><!--section-->
+
+    <footer class="page-footer deep-purple darken-3">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Footer Content</h5>
+            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Links</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+            </ul>
           </div>
         </div>
       </div>
-    </div>
+      <div class="footer-copyright">
+        <div class="container">
+        © 2023 Copyright Text
+        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        </div>
+      </div>
+    </footer>
 
     <script src="js/jquery.js"></script>
     <script src="js/materialize.js"></script>
